# RAG-NAS

./: .gitignore  HOW_TO_RUN.txt  README.md  implementation_plan.md  pyproject.toml  run_mieb.sh
data/processed/uir/: mmdetection_uir.jsonl  mmdetection_uir_failures.json  mmpretrain_uir.jsonl
docs/: project_report_for_professor.md
experiments/: README.md  list_gated_datasets.py  mieb_eval.py  results.csv  results_mieb.csv  results_nasbench201.csv  results_quick.csv  run_nasbench201.sh  run_nasbench201_e2e.py  test_mieb_fix.py
log/: 0304
logs/: alignment_training_20260325_105300.json  contrastive_training_20260319_192814.json
scripts/: train_contrastive_encoder.py
src/nas/: ea_config.yaml  evolutionary_search.py  nasbench201_evaluator.py
src/retrieval/: alignment.py  contrastive_encoder.py  dataset_analyzer.py  feature_store.py  llm_template_generator.py  local_template_generator.py  multimodal_retrieve.py  rag.py  retrieve.py
src/retrieval/sources/: sync_openmmlab_data.py
src/retrieval/uir/: openmmlab_to_uir.py
test/: evolutionary_search_smoke_test.py  retrieval_smoke_test.py  test_contras_smoke.py  test_e2e_pipeline.py  test_protocol_and_reporting.py  test_qwen_smoke.py  test_retrieval_modules.py
